--- a/app/components/Layout.scss
+++ b/app/components/Layout.scss
@@ -1,19 +1,20 @@
+$headerHeight: 100px;
+
 .layout-container {
-  display: flex;
   width: 100%;
   height: 100%;
-  flex-direction: column;
 }
 
 .header {
   display: flex;
-  flex: 0 0 100px;
+  height: $headerHeight;
   padding-left: 40px;
   align-items: center;
 }
 
 .content-container {
-  flex: 1 1 calc(100% - 100px);
+  /* variable interpolation in calc apparently doesn't work, but this is $headerHeight */
+  height: calc(100% - 100px);
   display: flex;
   flex-direction: column;
 }
